[project]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Devilfish281",email = "Dobley@csu.fullerton.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "openai (>=2.21.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "asset_processing_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
